--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ input[type="button"],input[type="submit"],.contact-form input[type="submit"]{
 }
 h1,h2,h3,h4,h5,h6{
 	margin:0;	
-}	
+}
 p{
 	margin:0;
 }
@@ -49,8 +49,7 @@ label{
 img{
 	width:100%;
 }
-
-
+#more {display: none;}
 /* header */
 
 /*-- //header --*/
@@ -73,7 +72,8 @@ nav {
 	margin:0;
 	padding: 0;
 }
-
+#more {
+	display: none;}
 
 #logo a {
 	float: left;
